--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ time, mark, audio, video {
 html {
   box-sizing: border-box;
   font: 18px helvetica, arial, sans-serif;
-  line-height: 1.6rem;
+  line-height: 2rem;
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -135,7 +135,7 @@ table {
 }
 
 .page-header__contact-info{
-  margin: 1% 0;
+  margin: 1.5% 0;
 }
 
 .contact-info__item{
@@ -164,7 +164,7 @@ table {
 .personal-info,
 .logo,
 .nav{
-  margin: 1%;
+  margin: 1.5%;
 }
 
 .nav__item{
@@ -192,7 +192,7 @@ table {
 }
 
 .article__paragraph{
-  padding: 10px;
+  padding: 1% 3%;
 }
 
 .article__blockquote {
@@ -206,11 +206,11 @@ table {
 }
 
 .article__content{
-  margin: 1%;
+  margin: 1.5%;
 }
 
 .article__aside{
-  margin: 1% 1% 1% 0;
+  margin: 1.5% 1.5% 1.5% 0;
 }
 
 .article:last-child {
@@ -295,7 +295,7 @@ table {
 }
 
 .details{
-  margin: 1%;
+  margin: 1.5%;
 }
 
 .details__paragraph{
